--- a/Prefs/Resources/AhAhAhPrefs.plist
+++ b/Prefs/Resources/AhAhAhPrefs.plist
@@ -1,145 +1,325 @@
-{
-	title = "Ah!Ah!Ah!";
-	items = (
-		{
-			cell = PSGroupCell;
-			headerCellClass = AhAhAhLogoCell;
-		},
-		{
-			cell = PSSwitchCell;
-			cellClass = AhAhAhSwitchCell;
-			label = Enabled;
-			key = Enabled;
-			default = 1;
-			defaults = "com.sticktron.ahahah";
-		},
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>title</key>
+	<string>Ah!Ah!Ah!</string>
+	<key>items</key>
+	<array>
+		
+		<!--+ HEADER +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>headerCellClass</key>
+			<string>AhAhAhLogoCell</string>
+		</dict>
+		
+		<!-- Enabled Switch (YES) -->
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSwitchCell</string>
+			<key>label</key>
+			<string>Enabled</string>
+			<key>key</key>
+			<string>Enabled</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+		</dict>
 		
 		
-		{
-			cell = PSGroupCell;
-		},
-		{
-			cell = PSLinkCell;
-			label = "Customize Alarm";
-			detail = AhAhAhPrefsThemeController;
-		},
+		<!--+ APPEARANCE +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Appearance</string>
+		</dict>
+		
+		<!-- Theme -->
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhThemeLinkCell</string>
+			<key>detail</key>
+			<string>AhAhAhPrefsThemeController</string>
+			<key>label</key>
+			<string>Theme</string>
+		</dict>
 		
 		
-		{
-			cell = PSGroupCell;
-			label = "ACTIVATING";
-		},
-		{
-			cell = PSLinkListCell;
-			label = "Max Failed Unlocks";
-			detail = "PSListItemsController";
-			validTitles = (
-				1,
-				2,
-				3,
-				4,
-				5,
-			);
-			validValues = (
-				1,
-				2,
-				3,
-				4,
-				5,
-			);
-			key = MaxFailures;
-			default = 2;
-			defaults = "com.sticktron.ahahah";
-			PostNotification = "com.sticktron.ahahah.prefschanged";
-		},
-		{
-			cell = PSSwitchCell;
-			cellClass = AhAhAhSwitchCell;
-			id = IgnoreBioFailure;
-			label = "Ignore Touch ID Fails";
-			key = IgnoreBioFailure;
-			default = 0;
-			defaults = "com.sticktron.ahahah";
-			PostNotification = "com.sticktron.ahahah.prefschanged";
-		},
+		<!--+ SOUND +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Sound</string>
+		</dict>
+		
+		<!-- Force Volume Override (YES) -->
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSwitchCell</string>
+			<key>label</key>
+			<string>Force Volume Level</string>
+			<key>key</key>
+			<string>ForceVolume</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+		</dict>
+		
+		<!-- Volume Slider (75%) -->
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSliderCell</string>
+			<key>label</key>
+			<string>Volume</string>
+			<key>min</key>
+			<real>0</real>
+			<key>max</key>
+			<real>100</real>
+			<key>showValue</key>
+			<false/>
+			<key>key</key>
+			<string>VolumeLevel</string>
+			<key>default</key>
+			<real>75</real>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+		</dict>
 		
 		
-		{
-			cell = PSGroupCell;
-			label = "DEACTIVATING";
-			footerText = "If neither option is selected the user will not be able to stop the alarm. The alarm will eventually stop on its own to avoid battery drain.";
-		},
-		{
-			cell = PSSwitchCell;
-			cellClass = AhAhAhSwitchCell;
-			id = AllowBioRemoval;
-			label = "Stop After Touch ID Match";
-			key = AllowBioRemoval;
-			default = 1;
-			defaults = "com.sticktron.ahahah";
-			PostNotification = "com.sticktron.ahahah.prefschanged";
-		},
-		{
-			cell = PSSwitchCell;
-			cellClass = AhAhAhSwitchCell;
-			label = "Stop After Lock Button Press";
-			key = AllowLockRemoval;
-			default = 0;
-			defaults = "com.sticktron.ahahah";
-			PostNotification = "com.sticktron.ahahah.prefschanged";
-		},
+		<!--+ ACTIVATING +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Activating</string>
+		</dict>
+		
+		<!-- Max Failed Unlocks (2) -->
+		<dict>
+			<key>cell</key>
+			<string>PSLinkListCell</string>
+			<key>label</key>
+			<string>Max Failed Unlocks</string>
+			<key>detail</key>
+			<string>AhAhAhListItemsController</string>
+			<key>validTitles</key>
+			<array>
+				<string>1</string>
+				<string>2</string>
+				<string>3</string>
+				<string>4</string>
+				<string>5</string>
+			</array>
+			<key>validValues</key>
+			<array>
+				<integer>1</integer>
+				<integer>2</integer>
+				<integer>3</integer>
+				<integer>4</integer>
+				<integer>5</integer>
+			</array>
+			<key>key</key>
+			<string>MaxFailures</string>
+			<key>default</key>
+			<integer>2</integer>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+			<key>PostNotification</key>
+			<string>com.sticktron.ahahah.prefschanged</string>
+		</dict>
+		
+		<!-- Ignore Bio Failures (NO)-->
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSwitchCell</string>
+			<key>label</key>
+			<string>Ignore Touch ID Fails</string>
+			<key>id</key>
+			<string>IgnoreBioFailure</string>
+			<key>key</key>
+			<string>IgnoreBioFailure</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+			<key>PostNotification</key>
+			<string>com.sticktron.ahahah.prefschanged</string>
+		</dict>
+		
+		<!--+ DEACTIVATING +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Deactivating</string>
+			<key>footerText</key>
+			<string>If neither option is selected the user will not be able to stop the alarm. The alarm will eventually stop on its own to avoid battery drain.</string>
+		</dict>
+		
+		<!-- Allow Touch ID Removal -->
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSwitchCell</string>
+			<key>label</key>
+			<string>Stop After Touch ID Match</string>
+			<key>id</key>
+			<string>AllowBioRemoval</string>
+			<key>key</key>
+			<string>AllowBioRemoval</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+			<key>PostNotification</key>
+			<string>com.sticktron.ahahah.prefschanged</string>
+		</dict>
+		
+		<!-- Allow Lock Button Removal -->
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhSwitchCell</string>
+			<key>label</key>
+			<string>Stop After Lock Button Press</string>
+			<key>key</key>
+			<string>AllowLockRemoval</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.sticktron.ahahah</string>
+			<key>PostNotification</key>
+			<string>com.sticktron.ahahah.prefschanged</string>
+		</dict>
 		
 		
-		{
-			cell = PSGroupCell;
-			label = SUPPORT;
-		},
-		{
-			cell = PSButtonCell;
-			cellClass = AhAhAhButtonCell;
-			label = "Send an Email";
-			icon = "Email.png";
-			action = openEmail;
-		},
-		{
-			cell = PSButtonCell;
-			cellClass = AhAhAhButtonCell;
-			label = "Send a Tweet";
-			icon = "Twitter.png";
-			action = openTwitter;
-		},
-		{
-			cell = PSButtonCell;
-			cellClass = AhAhAhButtonCell;
-			label = "Find me on Reddit";
-			icon = "Reddit.png";
-			action = openReddit;
-		},
-		{
-			cell = PSButtonCell;
-			cellClass = AhAhAhButtonCell;
-			label = "Contribute to Source Code";
-			icon = "GitHub.png";
-			action = openGitHub;
-		},
-		{
-			cell = PSButtonCell;
-			cellClass = AhAhAhButtonCell;
-			label = "Contribute via PayPal";
-			icon = "PayPal.png";
-			action = openPayPal;
-		},
+		<!--+ GET SUPPORT +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Get Support</string>
+		</dict>
+		
+		<!-- Email -->
+		<dict>
+			<key>action</key>
+			<string>openEmail</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhButtonCell</string>
+			<key>icon</key>
+			<string>Email.png</string>
+			<key>label</key>
+			<string>Send an Email</string>
+		</dict>
+		
+		<!-- Twitter -->
+		<dict>
+			<key>action</key>
+			<string>openTwitter</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhButtonCell</string>
+			<key>icon</key>
+			<string>Twitter.png</string>
+			<key>label</key>
+			<string>Send a Tweet</string>
+		</dict>
+		
+		<!-- Reddit -->
+		<dict>
+			<key>action</key>
+			<string>openReddit</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhButtonCell</string>
+			<key>icon</key>
+			<string>Reddit.png</string>
+			<key>label</key>
+			<string>Get help at /r/jailbreak</string>
+		</dict>
 		
 		
-		{
-			cell = PSGroupCell;
-			footerText = "\nCopyright \U00a9 2014-2016 Sticktron";
-			footerAlignment = 1;
-		},
-		{
-			cell = PSLinkCell;
-			label = "Credits";
-			detail = AhAhAhPrefsCreditsController;
-		},
-	);
-}
+		<!-- GIVE SUPPORT -->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Give Support</string>
+		</dict>
+		
+		<!-- GitHub -->
+		<dict>
+			<key>action</key>
+			<string>openGitHub</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhButtonCell</string>
+			<key>icon</key>
+			<string>GitHub.png</string>
+			<key>label</key>
+			<string>Contribute to Source Code</string>
+		</dict>
+		
+		<!-- PayPal -->
+		<dict>
+			<key>action</key>
+			<string>openPayPal</string>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>AhAhAhButtonCell</string>
+			<key>icon</key>
+			<string>PayPal.png</string>
+			<key>label</key>
+			<string>Contribute via PayPal</string>
+		</dict>
+		
+		
+		<!--+ CREDITS +-->
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>footerAlignment</key>
+			<string>1</string>
+			<key>footerText</key>
+			<string>
+Copyright © 2014-2016 Sticktron</string>
+		</dict>
+		
+		<!-- Credits -->
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>detail</key>
+			<string>AhAhAhPrefsCreditsController</string>
+			<key>label</key>
+			<string>Credits</string>
+		</dict>
+		
+	</array>
+</dict>
+</plist>
