--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,12 +1,16 @@
 Package: com.sticktron.ahahah
-Name: Ah!Ah!Ah! 2 Beta (iOS 7-10)
-Version: 2.0-beta2
+Name: Ah!Ah!Ah! 2.0 Beta 3 (iOS 7-10)
+Version: 2.0-beta3
 Architecture: iphoneos-arm
 Depends: firmware (>= 7.0), mobilesubstrate, preferenceloader
 Description: Trigger a video alarm when someone tries to unlock your phone.
  * Import videos from your Camera Roll.
- * Supports third-party videos ("themes").
+ * Supports third-party themes.
  * Comes with three themes, including "Ah!Ah!Ah! you didn't say the magic word!" from Jurassic Park.
+ __
+ [ChangeLog Beta 3]
+ Added iOS 10 support (probably still buggy, let me know)
+ __
 Author: Sticktron <sticktron@hotmail.com>
 Maintainer: Sticktron
 Icon: file:///Library/PreferenceBundles/AhAhAhPrefs.bundle/Icon.png
